force-app/main/default/objects/Package_Owner__c/Package_Owner__c.object-meta.xml
<CustomObject>
    <label>Package Owner</label>
    <nameField>
        <displayFormat>PKO-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>