force-app/main/default/objects/Package_Owner__c/fields/Package_Personal_Account__c.field-meta.xml
<CustomField>
    <fullName>Package_Personal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Personal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Package Owners</relationshipLabel>
    <relationshipName>Package_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>