force-app/main/default/objects/Package_Owner__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Package Owners</relationshipLabel>
    <relationshipName>Package_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>